Split out App.js code

--- a/SRC/index.html
+++ b/SRC/index.html
@@ -10,26 +10,6 @@
     <div id="root">not rendered</div>
     <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-  <script>
-    const App = () => {
-        return React.createElement(
-            "div", //create tag called 'div'.. <div> tag
-            {}, //What are its Attributes
-            React.createElement("h1",{},"adopt me") //children to look at
-            //^^^creates a div, then creates a h1 within div and outputs text in h1
-        ) 
-    };
-
-    const container = document.getElementById("root");
-    const root = ReactDOM.createRoot(container);
-    root.render(React.createElement(App)); //render "root" *createElement passed component "App" instead of string
-                                            //could have had attributes/children like above but not needed here
-
-// React is good for creating components.. made up of other components for reusable code (macro components made up from micro components) 
-// It's a small library to learn for rendering ui, great at handling lots of state that generates interfaces from state
-
-// JSx will use the createElement function for you
-
-  </script>
+    <script src="app.js"></script>
 </body>
-</html> 
+</html>
