--- a/SRC/index.html
+++ b/SRC/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root">not rendered</div>
-    <script type="module" src="./app.jsx"></script> <!-- type=module tells vite we are using es6 moduels and not common js-->
+    <script type="module" src="./App.jsx"></script> <!-- type=module tells vite we are using es6 moduels and not common js-->
 </body>
 </html>
